Add background for buttons in forms such as: login, register, reset password. and Home

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,7 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Manage Expenses"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/btn_custom"
+        app:backgroundTint="@null"/>
 
     <Button
         android:id="@+id/ah_btn_mng_budgets"
@@ -41,7 +43,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Manage Budgets"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/btn_custom"
+        app:backgroundTint="@null"/>
 
     <Button
         android:id="@+id/ah_btn_logout"
