--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Login"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/btn_custom"
+        app:backgroundTint="@null"/>
 
     <TextView
         android:id="@+id/al_tv_forgot_pwd"
