--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -45,7 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Register"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/btn_custom"
+        app:backgroundTint="@null"/>
 
     <TextView
         android:id="@+id/ar_tv_go_to_login"
