--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -30,7 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Reset Password"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="@drawable/btn_custom"
+        app:backgroundTint="@null"/>
 
     <TextView
         android:id="@+id/al_tv_back_to_login"
