--- a/app/src/main/res/drawable/btn_back_custom.xml
+++ b/app/src/main/res/drawable/btn_back_custom.xml
@@ -8,8 +8,8 @@
         android:height="50dp"/>
 
     <gradient
-        android:startColor="#03A9F4"
-        android:endColor="#4CAF50"/>
+        android:startColor="#F40303"
+        android:endColor="#AF4C82"/>
 
     <stroke
         android:width="1dp"
