--- a/app/src/main/res/drawable/nav_custom.xml
+++ b/app/src/main/res/drawable/nav_custom.xml
@@ -8,12 +8,13 @@
         android:height="50dp"/>
 
     <gradient
-        android:startColor="#03A9F4"
-        android:endColor="#4CAF50"/>
+        android:startColor="#64B5F6"
+        android:endColor="#81C784"
+        android:angle="45"/>
 
     <stroke
-        android:width="1dp"
-        android:color="#9C27B0"/>
+        android:width="2dp"
+        android:color="#BA68C8"/>
 
-    <corners android:radius="10dp"/>
+    <corners android:radius="12dp"/>
 </shape>
